--- a/gradle.properties
+++ b/gradle.properties
@@ -7,6 +7,7 @@ org.gradle.parallel=true
 	minecraft_version=1.19.3
 	yarn_mappings=1.19.3+build.1
 	loader_version=0.14.11
+	satin_version = 1.10.0
 
 # Mod Properties
 	mod_version = 1.0.3
